--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,6 +1,13 @@
+@font-face {
+    font-family: "cook";
+    src: url(../../public/fonts/cookies-and-milk-font/CookiesandmilkRegular-W64Y.ttf);
+}
 @import "./fonts";
 @import "./variables";
 @import "./modules/navbar.scss";
+@import "./modules/section1";
+@import "./modules/section2";
+
 
 $fa-font-path : "../../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
