--- a/src/sass/modules/_section2.scss
+++ b/src/sass/modules/_section2.scss
@@ -1,6 +1,6 @@
 #s2{
     padding-top:8vh ;
-    height: 80vh;
+    height: 20vh;
 }
 #ds2{
     height: 10vh;
@@ -16,4 +16,70 @@
 #ds2 h3{
     font-family: "cook";
     font-size: 50px;
+}
+#divts2{
+    width: 100%;
+    height: 50vh;
+}
+#p1{
+    margin-left: 15px;
+}
+#sous2{
+    height: 70vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+}
+
+#divImg{
+    background-image: url("../../../public/img/about.jpg");
+    height: 70vh;
+    width: 50vw;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.ps2{
+    margin-left: 35px;
+}
+#divTexte i{
+    color: rgba(29,212,193,255);
+    margin-right: 2px;
+}
+
+#spara{
+    margin-left: 19px;
+}
+#ims2{
+    margin-left: 35px;
+}
+#divBlanche{
+    height: 15vh;
+    background-color: white;
+    width: 35vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    margin-bottom: 10%;
+}
+#divBlanche strong{
+    color: rgba(29,212,193,255);
+    font-size: 30px;
+}
+#dim2{
+    background-image: url("../../../public/img/about-2.jpg");
+    background-size: 100%;
+    height: 232px;
+    margin-left: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#dim2 i{
+    font-size: 30px;
+    color: white;
+    padding: 20px;
+    background-color: rgba(29,212,193,255);
+    border-radius: 50%;
 }
