--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -7,7 +7,8 @@
 @import "./modules/navbar.scss";
 @import "./modules/section1";
 @import "./modules/section2";
-
+@import "./modules/section3";
+@import "./modules/section4";
 
 $fa-font-path : "../../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
