--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -9,6 +9,7 @@
 @import "./modules/section2";
 @import "./modules/section3";
 @import "./modules/section4";
+@import "./modules/section5";
 
 $fa-font-path : "../../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
