--- a/public/css/app.css
+++ b/public/css/app.css
@@ -375,6 +375,88 @@
   opacity: 0;
 }
 
+#s6 {
+  height: 60vh;
+  background-color: rgb(238, 239, 239);
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.sousdcom {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+#tout1 .pmoni {
+  font-size: 30px;
+  text-align: center;
+}
+#tout1 .pmoni span {
+  font-family: cook;
+}
+#tout1 .pmoni strong {
+  font-family: cook;
+  color: rgb(29, 212, 193);
+}
+
+#tout2 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50vw;
+  overflow: hidden;
+}
+
+#slider {
+  flex-shrink: 0;
+  width: 100%;
+}
+
+.dcom {
+  width: 100%;
+  height: 330px;
+  display: flex;
+  transition: 1s;
+}
+.dcom div {
+  width: 1000px;
+  height: 100%;
+  flex-shrink: 0;
+}
+
+#rouge {
+  color: red;
+}
+
+.fa-solid {
+  color: rgb(255, 193, 2);
+}
+
+.tmoni {
+  border-radius: 50%;
+  border: 5px solid white;
+  margin-left: 10%;
+}
+
+#divbtcar1 {
+  display: flex;
+  justify-content: center;
+}
+#divbtcar1 button {
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  margin-left: 4px;
+}
+#divbtcar1 button:hover {
+  background-color: aqua;
+  border: 2px solid aqua;
+}
+
 /*!
  * Font Awesome Free 6.2.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
