--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -10,6 +10,11 @@
 @import "./modules/section3";
 @import "./modules/section4";
 @import "./modules/section5";
+@import "./modules/section6";
+
+
+
+
 
 $fa-font-path : "../../node_modules/@fortawesome/fontawesome-free/webfonts";
 @import "../../node_modules/@fortawesome/fontawesome-free/scss/fontawesome.scss";
