--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -11,7 +11,7 @@
 @import "./modules/section4";
 @import "./modules/section5";
 @import "./modules/section6";
-
+@import "./modules/section7";
 
 
 
