--- a/src/sass/modules/_section6.scss
+++ b/src/sass/modules/_section6.scss
@@ -1,11 +1,12 @@
 #s6{
-    height: 60vh;
+    height: 65vh;
     background-color: rgba(238,239,239,255);
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding-bottom: 5vh;
 }
 .sousdcom{
     display: flex;
@@ -33,10 +34,7 @@
     width: 50vw;
     overflow: hidden;
 }
-#slider{
-    flex-shrink: 0;
-    width: 100%;
-}
+
 .dcom{
     width: 100%;
     height: 330px;
