--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -12,7 +12,7 @@
 @import "./modules/section5";
 @import "./modules/section6";
 @import "./modules/section7";
-
+@import "./modules/section8";
 
 
 
