--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -13,6 +13,10 @@
 @import "./modules/section6";
 @import "./modules/section7";
 @import "./modules/section8";
+@import "./modules/section9";
+
+
+
 
 
 
