--- a/src/sass/modules/_section8.scss
+++ b/src/sass/modules/_section8.scss
@@ -47,6 +47,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
+    transition: 1s;
 
 }
 #sousd2s8_3{
@@ -58,7 +59,7 @@
     display: flex;
     justify-content: center;
     align-items: flex-end;
-
+    transition: 1s;
 }
 .dvag{
     height: 45%;
