--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -14,7 +14,7 @@
 @import "./modules/section7";
 @import "./modules/section8";
 @import "./modules/section9";
-
+@import "./modules/section10";
 
 
 
