--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -15,7 +15,7 @@
 @import "./modules/section8";
 @import "./modules/section9";
 @import "./modules/section10";
-
+@import "./modules/section11";
 
 
 
