--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -16,7 +16,7 @@
 @import "./modules/section9";
 @import "./modules/section10";
 @import "./modules/section11";
-
+@import "./modules/footer";
 
 
 
