--- a/public/css/app.css
+++ b/public/css/app.css
@@ -26,6 +26,7 @@
 #divT p {
   margin-left: 10px;
   color: rgba(0, 0, 0, 0.244);
+  transition: 1s;
 }
 
 #divMo {
@@ -37,6 +38,33 @@
   background-color: rgb(29, 212, 193);
   color: white;
   border-radius: 20px;
+}
+
+.hvr-underline-from-left {
+  display: inline-block;
+  vertical-align: middle;
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+  position: relative;
+  overflow: hidden;
+}
+
+.hvr-underline-from-left:before {
+  content: "";
+  position: absolute;
+  z-index: -1;
+  left: 0;
+  right: 100%;
+  bottom: 0;
+  background: #2098D1;
+  height: 4px;
+  transition-property: right;
+  transition-duration: 0.3s;
+  transition-timing-function: ease-out;
+}
+
+.hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
+  right: 0;
 }
 
 #s1 {
@@ -546,6 +574,7 @@
 #divcar2 {
   background-size: 101vh;
   background: linear-gradient(rgba(0, 0, 0, 0.492), rgba(0, 0, 0, 0.65)), url("../../../public/img/events-2.jpg");
+  margin-left: 15%;
 }
 
 #divcar3 {
@@ -1114,11 +1143,68 @@
   border-radius: 20px;
   border: none;
   margin-top: 2%;
+  transition: 1s;
+}
+
+#bts11:hover {
+  background-color: red;
 }
 
 #divbts11 {
   display: flex;
   justify-content: center;
+}
+
+footer {
+  height: 40vh;
+  width: 100vw;
+  background-color: rgb(25, 25, 31);
+  margin-top: 10%;
+}
+
+#divf {
+  display: flex;
+  height: 50%;
+  width: 100vw;
+}
+
+#sousdivF {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 100vw;
+}
+#sousdivF p {
+  color: rgb(185, 185, 187);
+}
+#sousdivF p i {
+  border: 1px solid gray;
+  border-radius: 50%;
+  padding: 5px;
+  color: white;
+}
+
+#dligne {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#ligne {
+  height: 2px;
+  width: 85vw;
+  background-color: gray;
+}
+
+#derniere {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50%;
+}
+#derniere p {
+  color: rgb(185, 185, 187);
 }
 
 /*!
