--- a/src/sass/modules/_navbar.scss
+++ b/src/sass/modules/_navbar.scss
@@ -15,10 +15,17 @@
     display: flex;
     align-items: center;
 }
-#divT p{
-    margin-left:10px;
-    color: rgba(0, 0, 0, 0.244);
+#divT{
+
+    p{margin-left:10px;
+        color: rgba(0, 0, 0, 0.244);
+        transition: 1s;
+
+    }
+    
+   
 }
+
 #divMo{
     display: flex;
     justify-content: center;
@@ -29,3 +36,36 @@
     color: white;
     border-radius:20px;
 }
+
+
+
+
+
+.hvr-underline-from-left {
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+    position: relative;
+    overflow: hidden;
+  }
+  .hvr-underline-from-left:before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    right: 100%;
+    bottom: 0;
+    background: #2098D1;
+    height: 4px;
+    -webkit-transition-property: right;
+    transition-property: right;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
+    -webkit-transition-timing-function: ease-out;
+    transition-timing-function: ease-out;
+  }
+  .hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
+    right: 0;
+  }
