--- a/src/sass/modules/_section11.scss
+++ b/src/sass/modules/_section11.scss
@@ -118,6 +118,10 @@
     border-radius:20px;
     border: none;
     margin-top: 2%;
+    transition: 1s;
+}
+#bts11:hover{
+    background-color: red;
 }
 #divbts11{
     display: flex;
