--- a/src/sass/modules/_section7.scss
+++ b/src/sass/modules/_section7.scss
@@ -89,6 +89,7 @@ padding-bottom: 15vh;
 #divcar2 {
     background-size: 101vh;
     background:linear-gradient(rgba(0, 0, 0, 0.492),rgba(0, 0, 0, 0.65)),url("../../../public/img/events-2.jpg") ;
+    margin-left: 15%;
 }
 
 #divcar3 {
