--- a/src/sass/modules/_navbar.scss
+++ b/src/sass/modules/_navbar.scss
@@ -1,9 +1,13 @@
-
-#pointV{
+#pointV {
     color: green;
 }
-#secDiv{
-    position: sticky;
+body{
+    margin: 0;
+}
+
+#secDiv {
+    z-index: 999;
+    position: fixed;
     display: flex;
     background-color: rgb(215, 211, 211);
     justify-content: space-evenly;
@@ -11,35 +15,34 @@
     width: 100%;
     align-items: center;
 }
-#divT{
+
+#divT {
     display: flex;
     align-items: center;
 }
-#divT{
 
-    p{margin-left:10px;
+#divT {
+
+    p {
+        margin-left: 10px;
         color: rgba(0, 0, 0, 0.244);
         transition: 1s;
-
     }
-    
-   
 }
 
-#divMo{
+#divMo {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 5vh;
     width: 8vw;
-    background-color: rgba(29,212,193,255);
+    background-color: rgba(29, 212, 193, 255);
     color: white;
-    border-radius:20px;
+    border-radius: 20px;
 }
-
-
-
-
+#divMo:hover{
+    background-color: red;
+}
 
 .hvr-underline-from-left {
     display: inline-block;
@@ -49,8 +52,9 @@
     box-shadow: 0 0 1px rgba(0, 0, 0, 0);
     position: relative;
     overflow: hidden;
-  }
-  .hvr-underline-from-left:before {
+}
+
+.hvr-underline-from-left:before {
     content: "";
     position: absolute;
     z-index: -1;
@@ -65,7 +69,28 @@
     transition-duration: 0.3s;
     -webkit-transition-timing-function: ease-out;
     transition-timing-function: ease-out;
-  }
-  .hvr-underline-from-left:hover:before, .hvr-underline-from-left:focus:before, .hvr-underline-from-left:active:before {
+}
+
+.hvr-underline-from-left:hover:before,
+.hvr-underline-from-left:focus:before,
+.hvr-underline-from-left:active:before {
     right: 0;
-  }
+}
+
+
+
+
+
+// modal
+
+.tblanc{
+    color: white !important;
+}
+.noir{
+    background-color: black !important;
+    color: white !important;
+}
+.noir2{
+background-color: black !important;
+color: black;
+}
