--- a/src/sass/modules/_navbar.scss
+++ b/src/sass/modules/_navbar.scss
@@ -1,7 +1,8 @@
 #pointV {
     color: green;
 }
-body{
+
+body {
     margin: 0;
 }
 
@@ -40,7 +41,8 @@ body{
     color: white;
     border-radius: 20px;
 }
-#divMo:hover{
+
+#divMo:hover {
     background-color: red;
 }
 
@@ -83,14 +85,106 @@ body{
 
 // modal
 
-.tblanc{
+.tblanc {
     color: white !important;
 }
-.noir{
+
+.noir {
     background-color: black !important;
     color: white !important;
 }
-.noir2{
-background-color: black !important;
-color: black;
+
+.noir2 {
+    background-color: black !important;
+    color: black;
+}
+
+#dark {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vh;
+    width: 12vw;
+    background-color: rgba(29, 212, 193, 255);
+    color: white;
+    border-radius: 20px;
+    border: none;
+}
+
+#dark:hover {
+    background-color: red;
+}
+
+
+//modal 
+
+.modal {
+    margin-left: 25%;
+    position: fixed;
+    z-index: 1;
+    width: 50vw !important;
+    height: 60vh !important;
+}
+
+.modal-content {
+    background-color: blue;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    i{
+        color: red;
+    }
+    i:hover{
+        color: rgba(29,212,193,255);
+    }
+    }
+
+.close {
+    color: red;
+    font-size: 28px;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+#divForm{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-color: rgba(29,212,193,255);
+    height: 35vh;
+    h2{
+        color: black;
+    }
+}
+#conn{
+    margin-top: 3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 5vh;
+    width: 11vw;
+    background-color: rgba(29, 212, 193, 255);
+    color: white;
+    border-radius: 20px;
+    border: 2px solid black;
+}
+#conn:hover{
+    background-color: red;
+}
+#mdpOub{
+    margin-top: 1%;
+    height: 5vh;
+    width: 11vw;
+    background-color: rgba(29, 212, 193, 255);
+    color: white;
+    border-radius: 20px;
+    border: 2px solid black;
+}
+#mdpOub:hover{
+    background-color: red;
 }
