--- a/src/sass/modules/_footer.scss
+++ b/src/sass/modules/_footer.scss
@@ -42,6 +42,6 @@ footer{
     height: 50%;
     p{
         color: rgba(185,185,187,255);
-        
     }
+    background-color: rgba(25,25,31,255);
 }
