--- a/src/sass/modules/_section5.scss
+++ b/src/sass/modules/_section5.scss
@@ -10,6 +10,7 @@
 
 #s5 h1{
     font-family:cook;
+
 }
 #sps5{
     color: rgba(29,212,193,255);
@@ -24,6 +25,7 @@
     margin-left: 5%;
     padding-bottom: 10px;
     border-bottom: 1px solid black;
+    cursor: pointer;
 }
 #dtitres5 p:hover{
     color: rgba(29,212,193,255);
