--- a/public/css/app.css
+++ b/public/css/app.css
@@ -46,9 +46,11 @@ body {
 
 #divMo:hover {
   background-color: red;
+  cursor: pointer;
 }
 
 .hvr-underline-from-left {
+  cursor: pointer;
   display: inline-block;
   vertical-align: middle;
   transform: perspective(1px) translateZ(0);
@@ -150,6 +152,8 @@ body {
 }
 #divForm h2, #divForm .h2 {
   color: black;
+  font-family: cook;
+  font-size: 40px;
 }
 
 #conn {
@@ -471,6 +475,7 @@ body {
   margin-left: 5%;
   padding-bottom: 10px;
   border-bottom: 1px solid black;
+  cursor: pointer;
 }
 
 #dtitres5 p:hover {
@@ -1328,6 +1333,7 @@ footer {
   justify-content: center;
   align-items: center;
   height: 50%;
+  background-color: rgb(25, 25, 31);
 }
 #derniere p {
   color: rgb(185, 185, 187);
