--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -17,7 +17,7 @@
 @import "./modules/section10";
 @import "./modules/section11";
 @import "./modules/footer";
-
+@import "./modules/responsive";
 
 
 $fa-font-path : "../../node_modules/@fortawesome/fontawesome-free/webfonts";
