--- a/src/sass/modules/_responsive.scss
+++ b/src/sass/modules/_responsive.scss
@@ -1,5 +1,6 @@
 
-// Tablette
+// Tablette --------------------------------------------------------------------------------------------
+
 
 
 @media only screen and (max-width: 769px)and (min-width: 767px){
@@ -147,6 +148,8 @@
         }
     }
 }
+// Mobile m --------------------------------------------------------------------------------------------
+
 
 @media only screen and (max-width: 376px){
 
@@ -371,7 +374,7 @@
     }
 }
 
-// mobile L
+// mobile L --------------------------------------------------------------------------------------------
 
 @media only screen and (max-width: 426px) and (min-width: 424px){
     #secDiv{
