--- a/src/sass/modules/_section2.scss
+++ b/src/sass/modules/_section2.scss
@@ -25,11 +25,11 @@
     margin-left: 15px;
 }
 #sous2{
-    height: 70vh;
+    
     width: 100vw;
     display: flex;
     justify-content: center;
-    padding: auto;
+    padding-block: 100px;
     
 }
 
