--- a/src/sass/modules/_section3.scss
+++ b/src/sass/modules/_section3.scss
@@ -1,6 +1,6 @@
 #s3{
     margin-top: 5%;
-    height: 50vh;
+    padding-block: 50px;
     width: 100%;
     background-color: rgba(238,239,239,255);
     display: flex;
