--- a/src/sass/modules/_section6.scss
+++ b/src/sass/modules/_section6.scss
@@ -1,12 +1,11 @@
 #s6{
-    height: 65vh;
+    padding-block: 50px;
     background-color: rgba(238,239,239,255);
     width: 100vw;
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    padding-bottom: 5vh;
 }
 .sousdcom{
     display: flex;
