--- a/src/sass/modules/_section8.scss
+++ b/src/sass/modules/_section8.scss
@@ -1,5 +1,5 @@
 #s8{
-    height: 130vh;
+    padding-block: 50px;
     margin-top: 20%;
     background-color: rgba(238,239,239,255);
 }
@@ -21,7 +21,7 @@
     color: rgba(138,138,154,255);
 }
 #d2s8{
-    height: 90vh;
+    padding-block: 50px;
     width: 100%;
     display: flex;
     justify-content: center;
