--- a/public/css/app.css
+++ b/public/css/app.css
@@ -188,16 +188,14 @@ body {
 }
 
 #s1 {
-  height: 80vh;
   width: 100vw;
-  background-color: rgb(238, 239, 239);
-  padding-block: 80px;
 }
 
 #dTot1 {
   display: flex;
-  height: 70vh;
+  padding-block: 60px;
   width: 100vw;
+  background-color: rgb(238, 239, 239);
 }
 
 #sDiv1 {
@@ -275,11 +273,10 @@ body {
 }
 
 #sous2 {
-  height: 70vh;
   width: 100vw;
   display: flex;
   justify-content: center;
-  padding: auto;
+  padding-block: 100px;
 }
 
 #divImg {
@@ -344,7 +341,7 @@ body {
 
 #s3 {
   margin-top: 5%;
-  height: 50vh;
+  padding-block: 50px;
   width: 100%;
   background-color: rgb(238, 239, 239);
   display: flex;
@@ -447,8 +444,8 @@ body {
 }
 
 #s5 {
-  height: 150vh;
-  width: 100vw;
+  padding-block: 50px;
+  width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -456,8 +453,8 @@ body {
   transition: 0.5s;
 }
 
-#s5 h1, #s5 .h1 {
-  font-family: cook;
+#s5 div h1, #s5 div .h1 {
+  color: red;
 }
 
 #sps5 {
@@ -494,12 +491,12 @@ body {
   justify-content: space-evenly;
   width: 60vw;
   margin-top: 3%;
-  height: 30vh;
+  padding-block: 20px;
   transition: 0.5s;
 }
 
 #dcard2 {
-  height: 30vh;
+  padding-block: 30px;
   display: flex;
   justify-content: space-evenly;
   width: 60vw;
@@ -524,7 +521,7 @@ body {
   align-items: center;
   flex-direction: column;
   width: 20vw;
-  height: 30vh;
+  padding-block: 30px;
   text-align: center;
 }
 
@@ -538,14 +535,13 @@ body {
 }
 
 #s6 {
-  height: 65vh;
+  padding-block: 50px;
   background-color: rgb(238, 239, 239);
   width: 100vw;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  padding-bottom: 5vh;
 }
 
 .sousdcom {
@@ -616,7 +612,7 @@ body {
 }
 
 #s7 {
-  height: 65vh;
+  padding-block: 50px;
   width: 100vw;
   padding-bottom: 15vh;
 }
@@ -735,7 +731,7 @@ body {
 }
 
 #s8 {
-  height: 130vh;
+  padding-block: 50px;
   margin-top: 20%;
   background-color: rgb(238, 239, 239);
 }
@@ -762,7 +758,7 @@ body {
 }
 
 #d2s8 {
-  height: 90vh;
+  padding-block: 50px;
   width: 100%;
   display: flex;
   justify-content: center;
@@ -928,7 +924,7 @@ body {
 }
 
 #d2s9 {
-  height: 60%;
+  padding-block: 30px;
   width: 80%;
   background-color: rgb(247, 247, 247);
   display: flex;
@@ -1004,8 +1000,7 @@ body {
 }
 
 #bts9 {
-  height: 5vh;
-  width: 8vw;
+  padding: 10px 20px;
   background-color: rgb(29, 212, 193);
   color: white;
   border-radius: 20px;
@@ -1142,7 +1137,7 @@ body {
 }
 
 #s11 {
-  height: 120vh;
+  padding-block: 30px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1339,560 +1334,77 @@ footer {
   color: rgb(185, 185, 187);
 }
 
-@media only screen and (max-width: 769px) and (min-width: 767px) {
-  #secDiv {
-    width: 100%;
-  }
-  #divMo {
-    width: 20vw;
-  }
-  #bts1 {
-    width: 15vw;
-  }
-  #dark {
-    width: 20vw;
-  }
-  #s1 {
-    width: 110%;
-  }
-  #s2 {
-    width: 110%;
-  }
-  #s3 {
-    height: 180vh;
-    width: 110%;
-    margin-top: 40%;
-    flex-direction: column;
-  }
-  .d2s3 {
-    margin-top: 8%;
-    width: 40%;
-  }
-  textarea {
-    width: 100%;
-  }
-  #d1s3 {
-    width: 40%;
-  }
-  #d1s3 button {
-    width: 30%;
-    height: 15%;
-  }
-  #s4 {
-    width: 110%;
-  }
-  #s5 {
-    width: 110%;
-    height: 180vh;
-  }
-  #dcard1 {
-    flex-direction: column;
-    position: relative;
-    margin-top: 30%;
-    height: 40vh;
-  }
-  #dcard1 img {
-    height: 110px;
-  }
-  #dcard2 {
-    flex-direction: column;
-    width: 20%;
-    margin-left: 30%;
-    position: absolute;
-    margin-top: 62%;
-  }
-  #dcard2 img {
-    height: 110px;
-  }
-  #s6 {
-    height: 70vh;
-    width: 110%;
-  }
-  .sousdcom img {
-    margin-left: 60%;
-    position: absolute;
-    margin-top: 20%;
-  }
-  #s7 {
-    width: 110%;
-    height: 80vh;
-  }
-  .dcom2 {
-    width: 60%;
-    position: absolute;
-    margin-left: 20%;
-    margin-top: 5%;
-  }
-  #s8 {
-    height: 100vh;
-    width: 110%;
-  }
-  #s8 i {
-    position: absolute;
-  }
-  #sousd2s8_1 {
-    height: 60%;
-  }
-  #sousd2s8_1 img {
-    opacity: 0;
-  }
-  #sousd2s8_2 {
-    height: 60%;
-  }
-  #sousd2s8_2 img {
-    opacity: 0;
-  }
-  #sousd2s8_3 {
-    height: 60%;
-  }
-  #sousd2s8_3 img {
-    opacity: 0;
-  }
-  #s9 {
-    width: 110%;
-  }
-  #s9 input {
-    width: 20%;
-  }
-  #s9 #bts9 {
-    height: 8vh;
-    width: 22vw;
-  }
-  #s10 {
-    width: 110%;
-  }
-  .dcom22 div {
-    width: 330px;
-  }
-  #s11 {
-    width: 110%;
-    height: 140vh;
-  }
-  #s11 iframe {
-    width: 95%;
-  }
-  footer {
-    width: 110%;
-    height: 110%;
-  }
-  footer div {
-    margin-left: 5%;
-  }
-}
-@media only screen and (max-width: 376px) {
-  #secDiv {
-    position: relative;
-    width: 120%;
-    display: flex;
-    flex-direction: column;
-    height: 70vh;
-  }
-  #dark {
-    width: 35vw;
-  }
-  #divMo {
-    width: 35vw;
-  }
-  #modal input {
-    width: 90%;
-  }
-  #mdpOub {
-    width: 110%;
-  }
-  #divT {
-    display: flex;
-    flex-direction: column;
-  }
-  #s1 {
-    width: 120%;
-  }
-  #s1 img {
-    width: 70%;
-    height: 60%;
-    margin-left: 40%;
-  }
-  #sDiv1 {
-    width: 50%;
-  }
-  #bt1 {
-    width: 35vw;
-    height: 25vh;
-  }
-  #bts1 {
-    width: 35vw;
-  }
-  #im1 {
-    width: 50%;
-    margin-left: 2%;
-  }
-  textarea {
-    width: 100%;
-  }
-  #s6 {
-    display: none;
-  }
-  #s2 {
-    height: 20vh;
-    width: 100%;
-    padding-bottom: 100px;
-  }
-  #dim2 {
-    display: none;
-  }
-  #divImg {
-    display: none;
-  }
-  #divBlanche {
-    display: none;
+@media screen and (max-width: 769px) {
+  #dTot1 {
+    flex-direction: column !important;
+    align-items: center;
   }
   #sous2 {
-    width: 100vw !important;
-  }
-  #s3 {
-    width: 120%;
-  }
-  .d2s3 {
-    margin-top: 15%;
-  }
-  #d1s3 {
-    height: 40vh;
-  }
-  #d1s3 button {
-    display: none;
-  }
-  #s4 {
-    width: 120%;
-  }
-  #s5 {
-    width: 120%;
-    height: 150vh;
-  }
-  #dcard1 {
-    flex-direction: column;
-    position: relative;
-    margin-top: 80%;
-    height: 40vh;
-  }
-  #dcard1 img {
-    height: 60px;
-  }
-  #dimgCard p {
-    font-size: 7px;
-  }
-  #dcard2 {
-    flex-direction: column;
-    width: 20%;
-    margin-left: 30%;
-    position: absolute;
-    margin-top: 92% !important;
-  }
-  #dcard2 img {
-    height: 60px;
-  }
-  #s7 {
-    margin-top: 10vh;
-    width: 120%;
-  }
-  .dcom2 {
-    width: 90%;
-    height: 60%;
-    position: absolute;
-    margin-left: 10%;
-    margin-top: 10%;
-  }
-  #divbtcar11 {
-    margin-top: 13%;
-  }
-  #s8 {
-    height: 80vh;
-    width: 120%;
-  }
-  #s8 i {
-    position: absolute;
-  }
-  #d2s8 {
-    height: 50%;
-  }
-  #sousd2s8_1 {
-    height: 70%;
-  }
-  #sousd2s8_1 p {
-    display: none;
-  }
-  #sousd2s8_1 img {
-    opacity: 0;
-  }
-  #sousd2s8_2 {
-    height: 70%;
-  }
-  #sousd2s8_2 p {
-    display: none;
-  }
-  #sousd2s8_2 img {
-    opacity: 0;
-  }
-  #sousd2s8_3 {
-    height: 70%;
-  }
-  #sousd2s8_3 p {
-    display: none;
-  }
-  #sousd2s8_3 img {
-    opacity: 0;
-  }
-  #s9 {
-    width: 120%;
-  }
-  #d2s9 input {
-    width: 60px;
-  }
-  #s10 {
-    width: 120%;
-    height: 80vh;
-  }
-  .dcom22 div {
-    width: 450px;
-  }
-  #s11 {
-    width: 120%;
-    height: 100vh;
-  }
-  #s11 iframe {
-    width: 95%;
-  }
-  #d1ss1v2 {
-    height: 50vh;
-  }
-  #d3s11 {
-    height: 30vh;
-    width: 100%;
-  }
-  #d3s11 p {
-    font-size: 0px;
-  }
-  #d3s12 {
-    height: 30vh;
-    width: 100%;
-  }
-  #d3s12 p {
-    font-size: 0px;
-  }
-  #bts11 {
-    width: 35vw;
-  }
-  footer {
-    width: 120%;
-  }
-  footer p {
-    font-size: 15px;
-  }
-}
-@media only screen and (max-width: 426px) and (min-width: 424px) {
-  #secDiv {
-    position: relative;
-    width: 120%;
-    display: flex;
-    flex-direction: column;
-    height: 70vh;
-  }
-  #dark {
-    width: 35vw;
-  }
-  #divMo {
-    width: 35vw;
-  }
-  #modal input {
-    width: 90%;
-  }
-  #mdpOub {
-    width: 110%;
-  }
-  #divT {
-    display: flex;
-    flex-direction: column;
-  }
-  #s1 {
-    width: 120%;
-  }
-  #s1 img {
-    width: 70%;
-    height: 60%;
-    margin-left: 40%;
-  }
-  #sDiv1 {
-    width: 50%;
-  }
-  #bt1 {
-    width: 35vw;
-    height: 25vh;
-  }
-  #bts1 {
-    width: 35vw;
-  }
-  #im1 {
-    width: 50%;
-    margin-left: 2%;
-  }
-  textarea {
-    width: 100%;
-  }
-  #s6 {
-    display: none;
-  }
-  #s2 {
-    height: 20vh;
-    width: 100%;
-    padding-bottom: 100px;
-  }
-  #dim2 {
-    display: none;
+    flex-direction: column !important;
+    align-items: center;
   }
   #divImg {
-    display: none;
+    width: 80vw;
   }
-  #divBlanche {
-    display: none;
+  #divTexte {
+    padding-top: 50px;
+    width: 100%;
+    text-align: center;
   }
-  #sous2 {
-    width: 100vw !important;
+  .ps2 {
+    margin-left: 0px !important;
+  }
+  #dim2 {
+    margin-left: 0 !important;
   }
   #s3 {
-    width: 120%;
+    flex-direction: column;
   }
-  .d2s3 {
-    margin-top: 15%;
+  #s3 div {
+    width: 100%;
+    margin-top: 20px;
+    padding-block: 40px;
+    margin-inline: 0% !important;
+    text-align: center;
   }
-  #d1s3 {
-    height: 40vh;
+  #s3 div h1, #s3 div .h1 {
+    margin-left: 0;
   }
-  #d1s3 button {
-    display: none;
-  }
-  #s4 {
-    width: 120%;
-  }
-  #s5 {
-    width: 120%;
-    height: 160vh;
+  #s5 img {
+    width: 400px;
+    height: 400px;
+    margin-bottom: 10px;
   }
   #dcard1 {
     flex-direction: column;
-    position: relative;
-    margin-top: 80%;
-    height: 40vh;
-  }
-  #dcard1 img {
-    height: 60px;
-  }
-  #dimgCard p {
-    font-size: 7px;
+    align-items: center;
   }
   #dcard2 {
     flex-direction: column;
-    width: 20%;
-    margin-left: 30%;
-    position: absolute;
-    margin-top: 92% !important;
+    align-items: center;
   }
-  #dcard2 img {
-    height: 60px;
+  .sousdcom {
+    flex-direction: column;
+    align-items: start;
+    padding-top: 50px;
   }
-  #s7 {
-    margin-top: 10vh;
-    width: 120%;
-  }
-  .dcom2 {
-    width: 90%;
-    height: 60%;
-    position: absolute;
-    margin-left: 10%;
-    margin-top: 10%;
-  }
-  #divbtcar11 {
-    margin-top: 13%;
-  }
-  #s8 {
-    height: 80vh;
-    width: 120%;
-  }
-  #s8 i {
-    position: absolute;
+  .dcom {
+    height: 450px;
   }
   #d2s8 {
-    height: 50%;
+    flex-direction: column;
+    align-items: center;
   }
-  #sousd2s8_1 {
-    height: 70%;
+  #d2s8 div {
+    margin-top: 30px;
+    width: 50%;
   }
-  #sousd2s8_1 p {
-    display: none;
-  }
-  #sousd2s8_1 img {
-    opacity: 0;
-  }
-  #sousd2s8_2 {
-    height: 70%;
-  }
-  #sousd2s8_2 p {
-    display: none;
-  }
-  #sousd2s8_2 img {
-    opacity: 0;
-  }
-  #sousd2s8_3 {
-    height: 70%;
-  }
-  #sousd2s8_3 p {
-    display: none;
-  }
-  #sousd2s8_3 img {
-    opacity: 0;
-  }
-  #s9 {
-    width: 120%;
+  #d2s9 {
+    flex-direction: column;
+    align-items: center;
   }
   #d2s9 input {
-    width: 60px;
-  }
-  #s10 {
-    width: 120%;
-    height: 80vh;
-  }
-  .dcom22 div {
-    width: 450px;
-  }
-  #s11 {
-    width: 120%;
-    height: 100vh;
-  }
-  #s11 iframe {
-    width: 95%;
-  }
-  #d1ss1v2 {
-    height: 50vh;
-  }
-  #d3s11 {
-    height: 30vh;
-    width: 100%;
-  }
-  #d3s11 p {
-    font-size: 0px;
-  }
-  #d3s12 {
-    height: 30vh;
-    width: 100%;
-  }
-  #d3s12 p {
-    font-size: 0px;
-  }
-  #bts11 {
-    width: 35vw;
-  }
-  footer {
-    width: 120%;
-  }
-  footer p {
-    font-size: 15px;
+    margin-inline: 5px;
   }
 }
 /*!
